# GitFarm

gitcha_algorithms/: build.gradle.kts  settings.gradle.kts
gitcha_algorithms/src/main/cpp/: .gitignore  CMakeLists.txt
gitcha_algorithms/src/main/cpp/include/algorithm/: algorithm.hpp  pity.hpp  wrs.hpp
gitcha_algorithms/src/main/cpp/include/domain/: item.hpp
gitcha_algorithms/src/main/cpp/include/jni/: random.h
gitcha_algorithms/src/main/cpp/include/utils/: logger.hpp
gitcha_algorithms/src/main/cpp/src/algorithm/: algorithm.cpp  pity.cpp  wrs.cpp
gitcha_algorithms/src/main/cpp/src/jni/: random.cpp
gitcha_algorithms/src/main/cpp/src/utils/: logger.cpp
gitcha_algorithms/src/main/cpp/test/: test.cpp
gitcha_algorithms/src/main/kotlin/: Main.kt
gitcha_algorithms/src/main/kotlin/com/yamadalab/gitcha/: Random.kt
gitcha_algorithms/src/main/kotlin/com/yamadalab/gitcha/application/: Random.kt
gitcha_algorithms/src/main/kotlin/com/yamadalab/gitcha/domain/: Item.kt
gitcha_demo_server/src/main/kotlin/com/yamadalab/gitcha/random/presentation/: RandomController.kt
gitcha_demo_server/src/main/resources/: application.yaml
gitfarm_algorithm/: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
gitfarm_algorithm/gradle/wrapper/: gradle-wrapper.properties
gitfarm_algorithm/include/algorithm/: algorithm.hpp
gitfarm_algorithm/include/domain/: item.hpp  user.hpp
gitfarm_algorithm/include/jni/: jni.h  random.h
gitfarm_algorithm/include/logger/: logger.hpp
gitfarm_algorithm/src/algorithm/: algorithm.cpp
gitfarm_algorithm/src/domain/: item.cpp  user.cpp
gitfarm_algorithm/src/jni/: random.cpp
gitfarm_algorithm/src/logger/: logger.cpp
gitfarm_algorithm/src/main/cpp/: CMakeLists.txt
gitfarm_algorithm/src/main/cpp/include/algorithm/: algorithm.hpp
gitfarm_algorithm/src/main/cpp/include/domain/: item.hpp
gitfarm_algorithm/src/main/cpp/include/jni/: jni.h  random.h
gitfarm_algorithm/src/main/cpp/src/algorithm/: algorithm.cpp
gitfarm_algorithm/src/main/cpp/src/domain/: item.cpp
gitfarm_algorithm/src/main/cpp/src/jni/: random.cpp
gitfarm_algorithm/src/main/cpp/test/: test.cpp
gitfarm_algorithm/src/main/kotlin/: Main.kt
gitfarm_algorithm/src/main/kotlin/com/yamadalab/gitfarm/: Main.kt
gitfarm_algorithm/src/main/kotlin/com/yamadalab/gitfarm/algorithm/application/: Random.kt
gitfarm_algorithm/src/main/kotlin/com/yamadalab/gitfarm/algorithm/domain/: Item.kt
gitfarm_algorithm/src/main/kotlin/com/yamadalab/gitfarm/application/: Random.kt
gitfarm_algorithm/src/main/kotlin/com/yamadalab/gitfarm/domain/: Item.kt
gitfarm_algorithm/test/: test.cpp
gitfarm_demo_server/: build.gradle.kts  settings.gradle.kts
gitfarm_demo_server/src/main/kotlin/com/yamadalab/gitcha/: GitchaDummyServerApplication.kt
gitfarm_demo_server/src/main/kotlin/com/yamadalab/gitcha/random/application/: RandomService.kt
gitfarm_demo_server/src/main/kotlin/com/yamadalab/gitfarm/: GitfarmDummyServerApplication.kt
gitfarm_demo_server/src/main/kotlin/com/yamadalab/gitfarm/random/application/: RandomService.kt
gitfarm_demo_server/src/main/kotlin/com/yamadalab/gitfarm/random/presentation/: RandomController.kt
gitfarm_demo_server/src/main/resources/: application.yaml
gitfarm_demo_server/src/test/kotlin/com/yamadalab/gitcha/: GitchaDummyServerApplicationTests.kt
gitfarm_demo_server/src/test/kotlin/com/yamadalab/gitfarm/: GitfarmDummyServerApplicationTests.kt
gitfarm_gclient/: CMakeLists.txt
gitfarm_gclient/include/http/: curl.h
gitfarm_gclient/include/jni/: git.h
gitfarm_gclient/src/jni/: git.c
gitfarm_gclient/test/: test.c
gitfarm_git_api/: CMakeLists.txt  setup.sh
gitfarm_git_api/include/application/: curl.h
gitfarm_git_api/src/application/: curl.c
gitfarm_git_api/src/http/: curl.c
gitfarm_git_api/test/: test.c
gitfarm_middleware/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
gitfarm_middleware/gradle/wrapper/: gradle-wrapper.properties
gitfarm_middleware/src/main/c/: CMakeLists.txt
gitfarm_middleware/src/main/c/include/http/: curl.h
gitfarm_middleware/src/main/c/include/jni/: git.h  jni.h
gitfarm_middleware/src/main/c/src/http/: curl.c
gitfarm_middleware/src/main/c/src/jni/: git.c  jni.c
gitfarm_middleware/src/main/c/test/: test.c
gitfarm_middleware/src/main/kotlin/: Main.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/algorithm/: Item.kt  Random.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/algorithm/application/: Random.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/algorithm/domain/: Grade.kt  Item.kt  User.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/application/: Git.kt  GitCurl.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/gclient/: Git.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/git/: GitClient.kt  GitUser.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/git/application/: GitClient.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/git/domain/: GitConstants.kt  GitUser.kt
gitfarm_middleware/src/main/kotlin/com/yamadalab/gitfarm/middleware/utils/: Utils.kt
gitfarm_middleware/src/main/resources/graphql/: contribution_by_year.graphql
gitfarm_server/: build.gradle.kts  settings.gradle.kts
gitfarm_server/gradle/wrapper/: gradle-wrapper.properties
gitfarm_server/src/main/kotlin/com/yamadalab/gitfarm/: App.kt
gitfarm_server/src/main/resources/: application.yaml
